@@ -1,25 +1,3 @@
-if (!exists("as.character.hexmode", mode="function")) {
-  setMethodS3("as.character", "hexmode", function(x, ...) {
-    hexDigit <- c(0:9, "A", "B", "C", "D", "E", "F")
-    isna <- is.na(x)
-    y <- x[!isna]
-    ans0 <- character(length(y))
-    z <- NULL
-    while (any(y > 0) | is.null(z)) {
-      z <- y%%16
-      y <- floor(y/16)
-      ans0 <- paste(hexDigit[z + 1], ans0, sep = "")
-    }
-    ans <- rep(NA, length(x))
-    ans[!isna] <- ans0
-    ans
-  })
-} else {
-  # Just to please R CMD check, because the function is documented
-  # in an Rd file.
-  as.character.hexmode <- get("as.character.hexmode", mode="function");
-}
-
 intToHex <- function(x) {
   y <- as.integer(x);
   class(y) <- "hexmode";
